[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "change-logger"
version = "0.1.0"
description = "Change history logging to MongoDB"
authors = [
  { name="Test", email="test@loggerexample.com" }
]
dependencies = [
    "pymongo>=4.0",
]

[tool.setuptools.packages.find]
include = ["change_logger"]
